<resources>
    <string name="app_name">Studies Menager</string>
    <string name="title_activity_subject_detail">SubjectDetailActivity</string>
    <string name="title_activity_subjects">Przedmioty</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="subjectHint">Nazwa przedmiotu</string>
    <string name="highScoreHint">Maksymalna ilość punktów do uzyskania</string>
    <string name="labButton">LAB</string>
    <string name="tutButton">ĆWI</string>
    <string name="lecButton">WYK</string>
    <string name="title_activity_add_form">AddFormActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="passScoreHint">Liczba punktów potrzeba do zaliczenia</string>
    <string name="startHourHint">Godzina rozpoczęcia</string>
    <string name="endHourHint">Godzina końca</string>
    <string name="addClasses">Dodaj przedmiot</string>
    <string name="pushLabel">Powiadomienia push</string>
    <string name="classStartDate">Podaj date rozpoczęcia przedmiotu</string>
    <string name="onceAWeek">Raz w tygodniu</string>
    <string name="twiceAWeek">Raz na dwa tygodnie</string>
    <!-- Main Activity-->
    <string name="open_schedule_view_btn">Schedule</string>
    <!-- /Main Activity-->

    <!-- Schedule View Activity-->
    <string name="sv_subject_title">TYTUŁ ZAJĘĆ</string>
    <string name="sv_subject_date">1 LIPCA</string>
    <string name="sv_subject_time">15:00 - 18:00</string>
    <string name="sv_subject_att">OBECNOŚĆ:</string>
    <string name="sv_subject_att_num">90%</string>
    <string name="sv_subject_points">PUNKTY:</string>
    <string name="sv_subject_points_num">25/50</string>
    <string name="title_activity_main2">Main2Activity</string>
    <!-- /Schedule View Activity-->
</resources>
