<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_template"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/card_subject_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:layout_weight="1"
                android:text="@string/sv_subject_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:layout_weight="2">

                <TextView
                    android:id="@+id/card_subject_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:text="@string/sv_subject_date" />

                <TextView
                    android:id="@+id/card_subject_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"

                    android:text="@string/sv_subject_time" />

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:paddingTop="10dp"
                        android:gravity="right"
                        android:text="@string/sv_subject_att" />

                    <TextView
                        android:id="@+id/card_subject_att"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/sv_subject_att_num" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:paddingTop="10dp"
                        android:gravity="right"
                        android:text="@string/sv_subject_points" />

                    <TextView
                        android:id="@+id/card_subject_points"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:text="@string/sv_subject_points_num" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>
