
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tomasz.studiesmenager.ScheduleViewActivity">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="495dp"
        tools:context="com.example.tomasz.studiesmenager.ScheduleViewActivity"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:layout_weight="1"
                        android:text="@string/sv_subject_title" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:paddingTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingBottom="10dp"
                        android:layout_weight="2">

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"


                            android:text="@string/sv_subject_date" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="13sp"

                            android:text="@string/sv_subject_time" />

                    </LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="0dip"
                    android:layout_height="wrap_content"
                    android:layout_weight="3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="110dp"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:paddingTop="10dp"
                            android:gravity="right"
                            android:text="@string/sv_subject_att" />

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:paddingTop="10dp"
                            android:paddingLeft="10dp"
                            android:text="@string/sv_subject_att_num" />
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="110dp"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:paddingTop="10dp"
                                android:gravity="right"

                                android:text="@string/sv_subject_points" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="15sp"
                                android:paddingTop="10dp"
                                android:paddingLeft="10dp"
                                android:text="@string/sv_subject_points_num" />
                        </LinearLayout>

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>





        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>

